--- a/head_common.twig
+++ b/head_common.twig
@@ -1022,6 +1022,11 @@ a[href]:hover {
   background-color: #030712 !important;
 }
 
+/* Override black background for attachment toolbar */
+.reply-form .sp-flex.sp-items-stretch.sp-bg-secondary {
+  background-color: transparent !important;
+}
+
 /* Article Details Styling */
 .sp-article-details {
   list-style: none;
