--- a/head_common.twig
+++ b/head_common.twig
@@ -1643,11 +1643,24 @@ input[type="submit"]:hover {
 
 
 /* Attachment Section Styling */
+.sp-file-input {
+  color: #d1d5db !important;
+}
 
+.sp-file-input i,
+.sp-file-input svg {
+  color: #d1d5db !important;
+}
 
 .sp-file-input:hover {
   background: rgba(168, 85, 247, 0.1) !important;
   border-color: rgba(168, 85, 247, 0.4) !important;
+  color: #d1d5db !important;
+}
+
+.sp-file-input:hover i,
+.sp-file-input:hover svg {
+  color: #d1d5db !important;
 }
 
 .sp-attached-files {
