--- a/ticket/forms/message.twig
+++ b/ticket/forms/message.twig
@@ -44,9 +44,9 @@
 
             <div class="sp-flex sp-items-stretch sp-px-1 sp-bg-secondary sp-border sp-border-t-0 sp-border-tertiary sp-rounded-b">
                 <label class="sp-file-input sp-inline-block sp-px-2 sp-py-3/2 sp-text-sm sp-cursor-pointer hover:sp-text-secondary
-                             {% if not auth_check() %}sp-flex-grow{% else %}sp-flex-none{% endif %}">
+                             {% if not auth_check() %}sp-flex-grow{% else %}sp-flex-none{% endif %}" style="margin-bottom: 0;">
                     <i class="fas fa-paperclip"></i>
-                    <span class="sp-hidden md:sp-inline">&nbsp;{{ Lang.get('general.add_attachment') }}</span>
+                    <span>&nbsp;{{ Lang.get('general.add_attachment') }}</span>
                     <input class="sp-file-upload" type="file" name="files[]"
                            data-url="{{ route('ticket.frontend.attachment.upload') }}" multiple="multiple">
                 </label>
